--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Рекламное Агентство в Уфе | ОКЭД 73.11</title>
+    <meta name="description" content="Рекламное агентство в Уфе 'Созвездие'. Создание рекламных кампаний и медиапланирование. ОКЭД 73.11">
+    <meta name="keywords" content="Созвездие, реклама, маркетинг, рекламное агентство, Уфа, медиапланирование">
+    <meta name="author" content="ИП Ильясова Райхана Маниховна">
+    <title>Рекламное агентство в Уфе "Созвездие"</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -15,11 +18,12 @@
         header {
             background-color: #4CAF50;
             color: white;
-            padding: 15px 0;
+            padding: 20px 0;
             text-align: center;
         }
         header h1 {
             margin: 0;
+            font-size: 28px;
         }
         section {
             padding: 20px;
@@ -29,15 +33,13 @@
         }
         .service {
             display: flex;
-            justify-content: space-between;
+            flex-wrap: wrap;
+            gap: 20px;
             margin-bottom: 15px;
         }
         .service div {
             flex: 1;
-            margin-right: 20px;
-        }
-        .service div:last-child {
-            margin-right: 0;
+            min-width: 250px;
         }
         footer {
             background-color: #333;
@@ -58,43 +60,45 @@
 <body>
 
 <header>
-    <h1>Рекламное Агентство в Уфе | ОКЭД 73.11</h1>
+    <h1>Рекламное агентство в Уфе "Созвездие"</h1>
 </header>
 
 <section>
     <h2>О нашей компании</h2>
-    <p>Мы — рекламное агентство, специализирующееся на создании и реализации эффективных рекламных стратегий для бизнеса в Уфе и других городах. Наши услуги охватывают все направления в области маркетинга и рекламы, включая разработку креативных концепций, медиапланирование и анализ результатов рекламных кампаний.</p>
+    <p><strong>ИП Ильясова Райхана Маниховна</strong> — рекламное агентство "Созвездие", специализирующееся на создании и реализации эффективных рекламных стратегий для бизнеса в Уфе и других городах.</p>
+    <p>Мы охватываем все направления в области маркетинга и рекламы: от разработки креативных концепций до анализа результатов рекламных кампаний.</p>
     <p>Наша цель — помочь компаниям выделяться на рынке и достигать успеха с помощью грамотного продвижения.</p>
 
     <h2>Наши услуги</h2>
     <div class="service">
         <div>
             <h3>Создание рекламных кампаний</h3>
-            <p>Мы разрабатываем эффективные рекламные стратегии, учитывая потребности вашего бизнеса и особенности целевой аудитории.</p>
+            <p>Разработка стратегий с учётом целей бизнеса и целевой аудитории.</p>
         </div>
         <div>
             <h3>Медиапланирование</h3>
-            <p>Мы планируем и реализуем рекламные кампании на различных платформах, таких как телевидение, интернет, наружная реклама и другие.</p>
+            <p>Реклама в интернете, на телевидении, радио и наружных носителях.</p>
         </div>
         <div>
             <h3>Анализ эффективности</h3>
-            <p>Оценка результатов рекламных кампаний и оптимизация стратегий для повышения их эффективности и достижения лучших результатов.</p>
+            <p>Отчёты и рекомендации по улучшению результатов рекламы.</p>
         </div>
     </div>
 </section>
 
 <section>
-    <h2>Наши контакты</h2>
+    <h2>Контакты</h2>
     <div class="contact-info">
+        <p><strong>Юридическое лицо:</strong> ИП Ильясова Райхана Маниховна</p>
         <p><strong>Адрес:</strong> Россия, Республика Башкортостан, г. Уфа, ул. Степана Злобина, д. 4</p>
-        <p><strong>Телефон:</strong> +7 (123) 456-78-90</p>
-        <p><strong>Email:</strong> info@advertisingufa.ru</p>
-        <p><strong>Время работы:</strong> Пн-Пт, 09:00 - 18:00</p>
+        <p><strong>Телефон:</strong> +7 (901) 620-13-64</p>
+        <p><strong>Email:</strong> <a href="mailto:ilyasovaraihana@yandex.ru">ilyasovaraihana@yandex.ru</a></p>
+        <p><strong>Время работы:</strong> Пн–Пт, 09:00–18:00</p>
     </div>
 </section>
 
 <footer>
-    <p>© 2025 Рекламное агентство. Все права защищены.</p>
+    <p>© 2025 ИП Ильясова Р.М. Рекламное агентство "Созвездие". Все права защищены.</p>
 </footer>
 
 </body>
