--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Рекламное агентство в Уфе 'Созвездие'. Создание рекламных кампаний и медиапланирование. ОКЭД 73.11">
-    <meta name="keywords" content="Созвездие, реклама, маркетинг, рекламное агентство, Уфа, медиапланирование">
-    <meta name="author" content="ИП Ильясова Райхана Маниховна">
-    <title>Рекламное агентство в Уфе "Созвездие"</title>
+    <meta name="description" content="Рекламное агентство в Москве 'Созвездие'. Рекламные кампании и медиапланирование. ОКЭД 73.11">
+    <meta name="keywords" content="Созвездие, реклама, маркетинг, рекламное агентство, Москва, медиапланирование">
+    <meta name="author" content="ИП Глыбина Анастасия Юрьевна">
+    <title>Рекламное агентство в Москве "Созвездие" | ОКЭД 73.11</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -60,13 +60,13 @@
 <body>
 
 <header>
-    <h1>Рекламное агентство в Уфе "Созвездие"</h1>
+    <h1>Рекламное агентство в Москве "Созвездие"</h1>
 </header>
 
 <section>
     <h2>О нашей компании</h2>
-    <p><strong>ИП Ильясова Райхана Маниховна</strong> — рекламное агентство "Созвездие", специализирующееся на создании и реализации эффективных рекламных стратегий для бизнеса в Уфе и других городах.</p>
-    <p>Мы охватываем все направления в области маркетинга и рекламы: от разработки креативных концепций до анализа результатов рекламных кампаний.</p>
+    <p><strong>ИП Глыбина Анастасия Юрьевна</strong> — рекламное агентство "Созвездие", специализирующееся на создании и реализации эффективных рекламных стратегий для бизнеса в Москве и других регионах.</p>
+    <p>Мы охватываем все направления маркетинга и рекламы: от разработки креативных концепций до анализа результатов рекламных кампаний.</p>
     <p>Наша цель — помочь компаниям выделяться на рынке и достигать успеха с помощью грамотного продвижения.</p>
 
     <h2>Наши услуги</h2>
@@ -89,16 +89,16 @@
 <section>
     <h2>Контакты</h2>
     <div class="contact-info">
-        <p><strong>Юридическое лицо:</strong> ИП Ильясова Райхана Маниховна</p>
-        <p><strong>Адрес:</strong> Россия, Республика Башкортостан, г. Уфа, ул. Степана Злобина, д. 4</p>
-        <p><strong>Телефон:</strong> +7 (901) 620-13-64</p>
-        <p><strong>Email:</strong> <a href="mailto:ilyasovaraihana@yandex.ru">ilyasovaraihana@yandex.ru</a></p>
+        <p><strong>Юридическое лицо:</strong> ИП Глыбина Анастасия Юрьевна</p>
+        <p><strong>Адрес:</strong> Россия, г. Москва</p>
+        <p><strong>Телефон:</strong> +7 (984) 333-08-27</p>
+        <p><strong>Email:</strong> <a href="mailto:glybina.anastas@yandex.ru">glybina.anastas@yandex.ru</a></p>
         <p><strong>Время работы:</strong> Пн–Пт, 09:00–18:00</p>
     </div>
 </section>
 
 <footer>
-    <p>© 2025 ИП Ильясова Р.М. Рекламное агентство "Созвездие". Все права защищены.</p>
+    <p>© 2025 ИП Глыбина А.Ю. Рекламное агентство "Созвездие". Все права защищены.</p>
 </footer>
 
 </body>
